--- a/app/styles/teachers/markdown-resource-view.sass
+++ b/app/styles/teachers/markdown-resource-view.sass
@@ -107,3 +107,12 @@
           margin: 0 0 0 0px
           padding: 0 60px 0 50px
           border-left: 5px solid #eee
+
+  .ace_content
+    background-color: #f5f5f5
+    .ace_marker-layer
+      .ace_bracket
+        display: none
+    .ace_cursor-layer
+      .ace_cursor
+        display: none
