--- a/app/styles/teachers/teacher-course-solution-view.sass
+++ b/app/styles/teachers/teacher-course-solution-view.sass
@@ -29,3 +29,12 @@
 
   .page-break-before
     page-break-before: always
+
+  .ace_content
+    background-color: #f5f5f5
+    .ace_marker-layer
+      .ace_bracket
+        display: none
+    .ace_cursor-layer
+      .ace_cursor
+        display: none
